--- a/Perspective_Android/app/src/main/AndroidManifest.xml
+++ b/Perspective_Android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity
+            android:name=".NavigationActivity"
+            android:label="@string/title_activity_navigation"></activity>
     </application>
 
 </manifest>
